SimParser2.cpp
/*
* Copyright 2026 Rochus Keller <mailto:me@rochus-keller.ch>
*
* This file is part of the Simula67 parser library.
*
* The following is the license that applies to this copy of the
* library. For a license to use the library under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU General Public License Usage
* This file may be used under the terms of the GNU General Public
* License (GPL) versions 2.0 or 3.0 as published by the Free Software
* Foundation and appearing in the file LICENSE.GPL included in
* the packaging of this file. Please review the following information
* to ensure GNU General Public Licensing requirements will be met:
* http://www.fsf.org/licensing/licenses/info/GPLv2.html and
* http://www.gnu.org/copyleft/gpl.html.
*/

// Originally generated with EBNF studio from the Simula67.ebnf

#include "SimParser2.h"
using namespace Sim;

static inline bool FIRST_module(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_BEGIN:
	case Tok_CHARACTER:
	case Tok_TEXT:
	case Tok_CLASS:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_EXTERNAL:
	case Tok_REF:
	case Tok_PROCEDURE:
	case Tok_identifier:
		return true;
	default: return false;
	}
}

static inline bool FIRST_module_body_(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_BEGIN:
	case Tok_CHARACTER:
	case Tok_TEXT:
	case Tok_CLASS:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_REF:
	case Tok_PROCEDURE:
	case Tok_identifier:
		return true;
	default: return false;
	}
}

static inline bool FIRST_external_head(int tt) {
	return tt == Tok_EXTERNAL;
}

static inline bool FIRST_program(int tt) {
	return tt == Tok_BEGIN || tt == Tok_identifier;
}

static inline bool FIRST_while_statement(int tt) {
	return tt == Tok_WHILE;
}

static inline bool FIRST_block(int tt) {
	return tt == Tok_BEGIN || tt == Tok_identifier;
}

static inline bool FIRST_block_prefix(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_actual_parameter_part(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_main_block(int tt) {
	return tt == Tok_BEGIN;
}

static inline bool FIRST_compound_tail(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_FOR:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_IF:
	case Tok_WHILE:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_END:
	case Tok_FALSE:
	case Tok_Semi:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_declaration(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_ARRAY:
	case Tok_CHARACTER:
	case Tok_TEXT:
	case Tok_SWITCH:
	case Tok_CLASS:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_EXTERNAL:
	case Tok_REF:
	case Tok_PROCEDURE:
	case Tok_identifier:
		return true;
	default: return false;
	}
}

static inline bool FIRST_class_declaration(int tt) {
	return tt == Tok_CLASS || tt == Tok_identifier;
}

static inline bool FIRST_prefix(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_main_part(int tt) {
	return tt == Tok_CLASS;
}

static inline bool FIRST_protection_part(int tt) {
	return tt == Tok_PROTECTED || tt == Tok_HIDDEN;
}

static inline bool FIRST_protection_specification(int tt) {
	return tt == Tok_PROTECTED || tt == Tok_HIDDEN;
}

static inline bool FIRST_class_body(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_FOR:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_IF:
	case Tok_WHILE:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_FALSE:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_virtual_part(int tt) {
	return tt == Tok_VIRTUAL;
}

static inline bool FIRST_virtual_spec(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_CHARACTER:
	case Tok_ARRAY:
	case Tok_TEXT:
	case Tok_SWITCH:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_REF:
	case Tok_PROCEDURE:
	case Tok_LABEL:
		return true;
	default: return false;
	}
}

static inline bool FIRST_procedure_declaration(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_CHARACTER:
	case Tok_TEXT:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_REF:
	case Tok_PROCEDURE:
		return true;
	default: return false;
	}
}

static inline bool FIRST_procedure_heading(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_procedure_identifier(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_mode_part(int tt) {
	return tt == Tok_NAME || tt == Tok_VALUE;
}

static inline bool FIRST_value_part(int tt) {
	return tt == Tok_VALUE;
}

static inline bool FIRST_name_part(int tt) {
	return tt == Tok_NAME;
}

static inline bool FIRST_formal_parameter_part(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_formal_parameter_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_formal_parameter(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_parameter_delimiter(int tt) {
	return tt == Tok_Comma;
}

static inline bool FIRST_procedure_body(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_FOR:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_IF:
	case Tok_WHILE:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_FALSE:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_statement(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_FOR:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_IF:
	case Tok_WHILE:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_FALSE:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_unconditional_statement(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_FALSE:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Common_Base_statement(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_FOR:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_IF:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_FALSE:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Common_Base_conditional_statement(int tt) {
	return tt == Tok_IF;
}

static inline bool FIRST_for_statement(int tt) {
	return tt == Tok_FOR;
}

static inline bool FIRST_for_clause(int tt) {
	return tt == Tok_FOR;
}

static inline bool FIRST_for_right_part(int tt) {
	return tt == Tok_ColonEq || tt == Tok_ColonMinus;
}

static inline bool FIRST_value_for_list(int tt) {
	switch(tt){
	case Tok_NEW:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_Bang:
	case Tok_Plus:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_NOT:
	case Tok_IF:
	case Tok_character:
	case Tok_Unot:
	case Tok_FALSE:
	case Tok_Minus:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_object_for_list(int tt) {
	switch(tt){
	case Tok_NEW:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_Bang:
	case Tok_Plus:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_NOT:
	case Tok_IF:
	case Tok_character:
	case Tok_Unot:
	case Tok_FALSE:
	case Tok_Minus:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_value_for_list_element(int tt) {
	switch(tt){
	case Tok_NEW:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_Bang:
	case Tok_Plus:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_NOT:
	case Tok_IF:
	case Tok_character:
	case Tok_Unot:
	case Tok_FALSE:
	case Tok_Minus:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_object_for_list_element(int tt) {
	switch(tt){
	case Tok_NEW:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_Bang:
	case Tok_Plus:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_NOT:
	case Tok_IF:
	case Tok_character:
	case Tok_Unot:
	case Tok_FALSE:
	case Tok_Minus:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_go_to_statement(int tt) {
	return tt == Tok_GOTO || tt == Tok_GO;
}

static inline bool FIRST_unlabelled_basic_statement(int tt) {
	switch(tt){
	case Tok_BEGIN:
	case Tok_NEW:
	case Tok_GOTO:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_GO:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_REACTIVATE:
	case Tok_ACTIVATE:
	case Tok_character:
	case Tok_INSPECT:
	case Tok_FALSE:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_when_clause(int tt) {
	return tt == Tok_WHEN;
}

static inline bool FIRST_otherwise_clause(int tt) {
	return tt == Tok_OTHERWISE;
}

static inline bool FIRST_connection_part(int tt) {
	return tt == Tok_WHEN;
}

static inline bool FIRST_connection_statement(int tt) {
	return tt == Tok_INSPECT;
}

static inline bool FIRST_activator(int tt) {
	return tt == Tok_REACTIVATE || tt == Tok_ACTIVATE;
}

static inline bool FIRST_activation_clause(int tt) {
	return tt == Tok_REACTIVATE || tt == Tok_ACTIVATE;
}

static inline bool FIRST_simple_timing_clause(int tt) {
	return tt == Tok_AT || tt == Tok_DELAY;
}

static inline bool FIRST_timing_clause(int tt) {
	return tt == Tok_AT || tt == Tok_DELAY;
}

static inline bool FIRST_scheduling_clause(int tt) {
	return tt == Tok_AT || tt == Tok_BEFORE || tt == Tok_DELAY || tt == Tok_AFTER;
}

static inline bool FIRST_activation_statement(int tt) {
	return tt == Tok_REACTIVATE || tt == Tok_ACTIVATE;
}

static inline bool FIRST_specifier(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_CHARACTER:
	case Tok_ARRAY:
	case Tok_TEXT:
	case Tok_SWITCH:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_REF:
	case Tok_PROCEDURE:
	case Tok_LABEL:
		return true;
	default: return false;
	}
}

static inline bool FIRST_specification_part(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_CHARACTER:
	case Tok_ARRAY:
	case Tok_TEXT:
	case Tok_SWITCH:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_REF:
	case Tok_PROCEDURE:
	case Tok_LABEL:
		return true;
	default: return false;
	}
}

static inline bool FIRST_procedure_specification(int tt) {
	return tt == Tok_IS;
}

static inline bool FIRST_external_item(int tt) {
	return tt == Tok_identifier || tt == Tok_string;
}

static inline bool FIRST_external_list(int tt) {
	return tt == Tok_identifier || tt == Tok_string;
}

static inline bool FIRST_external_declaration(int tt) {
	return tt == Tok_EXTERNAL;
}

static inline bool FIRST_external_identifier(int tt) {
	return tt == Tok_identifier || tt == Tok_string;
}

static inline bool FIRST_switch_declaration(int tt) {
	return tt == Tok_SWITCH;
}

static inline bool FIRST_switch_identifier(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_switch_list(int tt) {
	switch(tt){
	case Tok_NEW:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_Bang:
	case Tok_Plus:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_NOT:
	case Tok_IF:
	case Tok_character:
	case Tok_Unot:
	case Tok_FALSE:
	case Tok_Minus:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}

static inline bool FIRST_simple_variable(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_variable_identifier(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_type_list_element(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_type_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_type_declaration(int tt) {
	switch(tt){
	case Tok_SHORT:
	case Tok_INTEGER:
	case Tok_CHARACTER:
	case Tok_TEXT:
	case Tok_BOOLEAN:
	case Tok_LONG:
	case Tok_REAL:
	case Tok_REF:
		return true;
	default: return false;
	}
}

static inline bool FIRST_array_list(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_array_segment(int tt) {
	return tt == Tok_identifier;
}

static inline bool FIRST_bound_pair_list(int tt) {
	switch(tt){
	case Tok_NEW:
	case Tok_Lpar:
	case Tok_string:
	case Tok_NOTEXT:
	case Tok_Bang:
	case Tok_Plus:
	case Tok_unsigned_integer:
	case Tok_NONE:
	case Tok_TRUE:
	case Tok_identifier:
	case Tok_THIS:
	case Tok_NOT:
	case Tok_IF:
	case Tok_character:
	case Tok_Unot:
	case Tok_FALSE:
	case Tok_Minus:
	case Tok_decimal_number:
		return true;
	default: return false;
	}
}
